<resources>
    <string name="app_name">ourClinic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="to_my_clinic">To My Clinic</string>
    <string name="continue_">Continue...</string>
    <string name="title_activity_doctor_login">Doctor Login Activity</string>
    <string name="doctor_licence_">"Doctor licence: "</string>
    <string name="doctor_password_">Doctor password:</string>
    <string name="login">Login</string>
    <string name="title_activity_menu_for_doc">MenuForDocActivity</string>
    <string name="show_visits">Show Visits</string>
    <string name="create_visit_for_patient">Create Visit For Patient</string>
    <string name="show_all_visits">Show all visits</string>
    <string name="show_all_vists_for_patient">Show All Vists For Patient</string>
    <string name="title_activity_visit">VisitActivity</string>
    <string name="visit_num_">Visit num:</string>
    <string name="visit_number_">Visit number:</string>
    <string name="visit_date_">Visit date:</string>
    <string name="doctor_">Doctor:</string>
    <string name="patient_">Patient:</string>
    <string name="options_for_doctor_number_">Options for doctor number:</string>
    <string name="_00000">00000</string>
    <string name="_00000000">00000000</string>
    <string name="doctor_opinion_">Doctor opinion:</string>
    <string name="title_activity_visit_list">Visit List Activity</string>
    <string name="visitdetails">visitDetails</string>
    <string name="title_activity_info_visit">InfoVisitActivity</string>
    <string name="add_medicines_amp_illnesses">Add medicines &amp;amp; illnesses</string>
    <string name="title_activity_visits_list">VisitsListActivity</string>
    <string name="title_activity_patient_info">Patient Info</string>
    <string name="options">Options</string>
    <string name="patient_apos_s_details">Patient&amp;apos;s Details</string>
    <string name="patient_details">Patient Details</string>
    <string name="title_activity_patient_details">PatientDetailsActivity</string>
    <string name="title_activity_options_for_pat">Options For Patient Activity</string>
    <string name="treatment_of_a_patient">Treatment of a patient</string>
    <string name="title_activity_schedule_for_doc">Schedule For Doctor</string>
    <string name="show_your_schedule_">"Show your schedule "</string>
    <string name="title_activity_my_list">MyListActivity</string>
    <string name="save">Save</string>
    <string name="title_activity_nisui">NisuiActivity</string>
    <string name="option4">option4</string>
    <string name="option3">option3</string>
    <string name="option2">option2</string>
    <string name="option1">option1</string>
    <string name="illnesses_">Illnesses:</string>
    <string name="itemdetails">itemDetails</string>
    <string name="id_">ID:</string>
    <string name="first_name_">First Name:</string>
    <string name="last_name_">Last Name:</string>
    <string name="birth_date_">Birth Date:</string>
    <string name="gender_">Gender:</string>
    <string name="address_">Address:</string>
    <string name="telephone_number_">Telephone Number:</string>
    <string name="email_">Email:</string>
    <string name="bank_account_">Bank Account:</string>
</resources>