<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuForDoc_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="control.MenuForDocActivity" >

    <TextView
        android:id="@+id/licence_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_for_doctor_number_"
        android:textColor="@color/Blue_DarkSlateBlue" />

    <TextView
        android:id="@+id/licenceDocOptions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00000"
        android:textColor="@color/Green_SeaGreen"
        android:textSize="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/showVisitsForDoc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/calendar"
        android:text="@string/show_your_schedule_" />

    <Button
        android:id="@+id/treatmentPat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/visit"
        android:text="@string/treatment_of_a_patient" />

</LinearLayout>
