<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clinic"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="control.MainActivity" >

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@android:dimen/app_icon_size"
        android:text="@string/welcome"
        android:textColor="@color/Blue_BlueViolet"
        android:textSize="@android:dimen/app_icon_size" />

    <TextView
        android:id="@+id/toMyClinic_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@android:dimen/thumbnail_height"
        android:paddingTop="@android:dimen/app_icon_size"
        android:text="@string/to_my_clinic"
        android:textColor="@color/Blue_BlueViolet"
        android:textSize="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/mainContinue_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/White_transparent_white_hex_5"
        android:shadowColor="#A84BDE"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/continue_"
        android:textColor="#0F0F0F"
        android:textSize="30sp" />

</LinearLayout>
