<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/docLogin_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_Lavender"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="control.DoctorLoginActivity" >

    <TextView
        android:id="@+id/enterLicence_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_licence_" />

    <EditText
        android:id="@+id/docLicence_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/enterDocPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_password_" />

    <EditText
        android:id="@+id/docPassword_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/docLogin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/errorLoginDoc_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Red" />

</LinearLayout>
